# brainframe-cli

./: .gitignore  Dockerfile  README.rst  get-cli.sh  mypy.ini  pyproject.toml
.circleci/: config.yml
.github/workflows/: deploy.yml  lint.yml
brainframe/cli/: __init__.py  brainframe_compose.py  brainframe_shell.py  config.py  defaults.py  defaults.yaml  dependencies.py  docker_compose.py  env_vars.py  frozen_utils.py  main.py  os_utils.py  print_utils.py
brainframe/cli/commands/: __init__.py  backup.py  compose.py  info.py  install.py  self_update.py  shell.py  uninstall.py  update.py  utils.py
brainframe/cli/translations/: __init__.py  backup.en.yml  compose.en.yml  general.en.yml  info.en.yml  install.en.yml  portal.en.yml  self-update.en.yml  shell.en.yml  uninstall.en.yml  update.en.yml
deployment/: Dockerfile.brainframe-cli  Dockerfile.env  Dockerfile.env.py312  Dockerfile.env.py36  Dockerfile.ubuntu  brainframe-cli-entrypoint.sh  build.py  dh_builddeb  do  dpkg-genbuildinfo  dpkg-genchanges  main.spec  parse_wheel.py  poetry.lock.py310.py312  poetry.lock.py36  poetry.lock.py38  pyproject.toml  pyproject.toml.py310.py312  pyproject.toml.py36  pyproject.toml.py38  shell.en
package/: main.spec  main.spec.py  setup.py  system_package_defaults.yaml  upload_binary.py
package/aur/: PKGBUILD
package/debian/: brainframe-cli.links  changelog  control  rules
