[tool.poetry]
name = "brainframe-cli"
version = "0.2.0"
license = "BSD-3-Clause"
authors = ["Aotu.ai <info@aotu.ai>"]

description = "Makes installing and managing a BrainFrame server easy"
readme = "README.rst"

repository = "https://github.com/aotuai/brainframe_cli"
homepage = "https://github.com/aotuai/brainframe_cli"

packages = [
    { include = "brainframe/cli/**/*.py" },
]
include = ["brainframe/cli/translations/*", "brainframe/cli/defaults.yaml"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
python-i18n = "^0.3"
pyyaml = "^5.3"
distro = "^1.5"
packaging = "^20.4"
requests = "^2.24.0"
docker-compose = "^1.29.2"
docker = ">4.3.1,<7.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "*"
pyinstaller = "^4.0"
isort = "^5.6"
boto3 = "^1.17.83"

[tool.poetry.scripts]
brainframe = "brainframe.cli.main:main"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
src_paths = ["brainframe/cli"]
line_length = 79
